# ai-invention-1ba2b3-why-extreme-value-theory-fails-for-minha

./: README.md
paper_latex/: paper.tex
paper_latex/workspace/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  convert_pdf_to_png.py  paper.aux  paper.bbl  paper.blg  paper.out  references.bib
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md
prompts/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_evaluation_1.md  gen_demo_art_experiment_1.md  (+2 more)
round-1/dataset-1/: README.md
round-1/experiment-1/: README.md
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-2/evaluation-1/: README.md
round-2/evaluation-1/src/: .sdk_openhands_agent_struct_out.json  eval.py  eval.py.bak  mini_eval_out.json  practitioner_guidelines.md  preview_eval_out.json  pyproject.toml
round-2/experiment-1/: README.md
round-2/experiment-2/: README.md
round-2/experiment-2/src/: .sdk_openhands_agent_struct_out.json  full_method_out.json  method.py  mini_data_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
(+44 files in other folders)
