[project]
name = "minhash-evt-experiment"
version = "0.1.0"
description = "EVT-MinHash Distribution Verification and Bootstrap Baseline"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.0",
    "scipy==1.18.0",
    "matplotlib==3.11.0",
    "seaborn>=0.12.0",
    "loguru>=0.7.0",
    "datasets>=2.0.0",
    "pandas>=2.0.0",
]
