[project]
name = "minhash-uq-evaluation"
version = "0.1.0"
description = "Evaluation of UQ methods for MinHash"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.0",
    "pandas==3.0.3",
    "scipy==1.18.0",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "scikit-learn==1.9.0",
    "statsmodels==0.14.6",
    "loguru==0.7.3",
    "tqdm==4.68.3",
]
