[project]
name = "alternative-uncertainty-quantification-minhash"
version = "0.1.0"
description = "Alternative Uncertainty Quantification for MinHash: Binomial and Bayesian Methods"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.18.0",
    "loguru==0.7.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
